<resources>
    <string name="app_name">TransportTimetable</string>
    <string name="title_view">Донецк</string>
    <string name="title">Карта Донецка</string>
    <string name="switchText">траффик</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">KbkDBhHTaUZUb6GELN3rIbt6SqrI6bmcDiv9ctU8</string>
    <string name="back4app_client_key">GF2mAlRIIRZBgZTYoV6qWTfY0xNtNWMEB59SS3qc</string>
    <string name="viewOnMap">Показать на карте</string>
    <string name="station">Остановки</string>
    <string name="trolleybus">Троллейбус</string>
    <string name="route">Маршруты</string>
    <string name="returnDirection">Обратный</string>
    <string name="subway">Трамвай</string>
    <string name="direct">Прямой</string>
    <string name="bus">Автобус</string>
    <string name="main_title">Донецк Транспорт</string>
    <string name="map">Карта</string>
    <string name="exit">ВЫХОД</string>
    <string name="textview">TextView</string>
    <string name="n">n</string>

    <string name="not_found_error_message">Not found</string>
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>
    <string name="search">Поиск</string>
    <string name="walk">walk</string>
</resources>